force-app/main/default/objects/MAS_Setup_Detail__c/MAS_Setup_Detail__c.object-meta.xml
<CustomObject>
    <description>Storage information related to MAS Service Setup</description>
    <label>MAS Setup Detail</label>
    <nameField>
        <displayFormat>MAS-{000000}</displayFormat>
        <label>MAS Setup Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAS Setup Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>