force-app/main/default/objects/MAS_Setup_Detail__c/fields/Business_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Number__c</fullName>
    <description>The business unit number associated to the vendor account.  This value is listed as a string due to the existing field on the account.</description>
    <inlineHelpText>The Business Unit number associated with the Vendor Id.  Business units are used to derive library and company codes.</inlineHelpText>
    <label>Business Unit Number</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>