force-app/main/default/objects/MAS_Setup_Detail__c/fields/Bypass_Price_Review__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Price_Review__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass Price Review</label>
    <type>Checkbox</type>
</CustomField>