force-app/main/default/objects/MAS_Setup_Detail__c/fields/Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Id__c</fullName>
    <description>Field created for Story 29645</description>
    <label>Facility Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>