force-app/main/default/objects/MAS_Setup_Detail__c/fields/MAS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>MAS_Company_Code__c</fullName>
    <description>The MAS Company Code used to setup a service</description>
    <label>MAS Company Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>