force-app/main/default/objects/MAS_Setup_Detail__c/fields/MAS_Library__c.field-meta.xml
<CustomField>
    <fullName>MAS_Library__c</fullName>
    <description>The MAS Library used to derive the MAS Company Code</description>
    <label>MAS Library</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>