force-app/main/default/objects/MAS_Setup_Detail__c/fields/MAS_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>MAS_Line_of_Business__c</fullName>
    <label>MAS Line of Business</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Roll Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>