force-app/main/default/objects/MAS_Setup_Detail__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>Field created for Story 29645</description>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>