force-app/main/default/objects/MAS_Setup_Detail__c/fields/Valid_For_New_Service__c.field-meta.xml
<CustomField>
    <fullName>Valid_For_New_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created for Story 29645</description>
    <label>Valid For New Service</label>
    <type>Checkbox</type>
</CustomField>